--- a/.env
+++ b/.env
@@ -1,8 +1,4 @@
-/var/
-!/var/.gitkeep
-/vendor/
-
 ###> symfony/framework-bundle ###
-/.env.local
-/.env.*.local
+APP_ENV=dev
+APP_SECRET=6986124be8333486262f73a2182fda06
 ###< symfony/framework-bundle ###
