--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,43 @@
     "description": "DevOps tools for your projects",
     "type": "library",
     "license": "Apache-2.0",
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "require": {
+        "php": ">=8.2",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "symfony/console": "7.2.*",
+        "symfony/dotenv": "7.2.*",
+        "symfony/flex": "^2.5.1",
+        "symfony/framework-bundle": "7.2.*",
+        "symfony/runtime": "7.2.*",
+        "symfony/yaml": "7.2.*"
+    },
     "autoload": {
         "psr-4": {
             "Steevanb\\DevOps\\": "src/"
         }
     },
-    "require": {},
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*",
+        "symfony/polyfill-php82": "*"
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true,
+            "symfony/flex": true,
+            "symfony/runtime": true
+        },
+        "bump-after-update": true,
+        "sort-packages": true
+    },
     "scripts": {
         "post-install-cmd": [
             "@rm-composer-lock"
@@ -17,5 +48,11 @@
             "@rm-composer-lock"
         ],
         "rm-composer-lock": "rm composer.lock"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "7.2.*"
+        }
     }
 }
