--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,7 +2,7 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
-    App\:
+    Steevanb\DevOps\:
         resource: '../src/'
         exclude:
             - '../src/Kernel.php'
