--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,22 @@
 {
     "name": "steevanb/dev-ops",
     "description": "DevOps tools for your projects",
-    "type": "library",
     "license": "Apache-2.0",
-    "minimum-stability": "stable",
-    "prefer-stable": true,
+    "type": "library",
     "require": {
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "7.2.*",
-        "symfony/dotenv": "7.2.*",
-        "symfony/flex": "^2.5.1",
-        "symfony/framework-bundle": "7.2.*",
-        "symfony/runtime": "7.2.*",
-        "symfony/yaml": "7.2.*"
+        "symfony/console": "~7.2.0",
+        "symfony/dotenv": "~7.2.0",
+        "symfony/event-dispatcher": "~7.2.0",
+        "symfony/flex": "~2.5.0",
+        "symfony/framework-bundle": "~7.2.0",
+        "symfony/http-kernel": "~7.2.0",
+        "symfony/runtime": "~7.2.0"
     },
-    "autoload": {
-        "psr-4": {
-            "Steevanb\\DevOps\\": "src/"
-        }
+    "require-dev": {
+        "steevanb/php-parallel-processes": "^1.0"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
@@ -31,6 +28,13 @@
         "symfony/polyfill-php81": "*",
         "symfony/polyfill-php82": "*"
     },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "autoload": {
+        "psr-4": {
+            "Steevanb\\DevOps\\": "src/"
+        }
+    },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
@@ -40,6 +44,12 @@
         "bump-after-update": true,
         "sort-packages": true
     },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "7.2.*"
+        }
+    },
     "scripts": {
         "post-install-cmd": [
             "@rm-composer-lock"
@@ -48,11 +58,5 @@
             "@rm-composer-lock"
         ],
         "rm-composer-lock": "rm composer.lock"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "7.2.*"
-        }
     }
 }
